force-app/main/default/objects/Document_Handler_History__c/Document_Handler_History__c.object-meta.xml
<CustomObject>
    <label>Document Handler History</label>
    <nameField>
        <displayFormat>DHH-{000}</displayFormat>
        <label>Document Handler History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Handler Historys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>