force-app/main/default/objects/Document_Handler_History__c/fields/DMS_System_Name__c.field-meta.xml
<CustomField>
    <fullName>DMS_System_Name__c</fullName>
    <defaultValue>&apos;Salesforce&apos;</defaultValue>
    <label>DMS System Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DMS_System_Name</valueSetName>
    </valueSet>
</CustomField>