force-app/main/default/objects/Document_Handler_History__c/fields/Document_Handler__c.field-meta.xml
<CustomField>
    <fullName>Document_Handler__c</fullName>
    <label>Document Handler</label>
    <referenceTo>Document_Handler__c</referenceTo>
    <relationshipLabel>Document Handler Historys</relationshipLabel>
    <relationshipName>Document_Handler_Historys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>