force-app/main/default/objects/Document_Handler_History__c/fields/Document_Path__c.field-meta.xml
<CustomField>
    <fullName>Document_Path__c</fullName>
    <label>Document Path</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>