force-app/main/default/objects/Document_Handler_History__c/fields/task_id__c.field-meta.xml
<CustomField>
    <fullName>task_id__c</fullName>
    <label>Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>