force-app/main/default/objects/Document_Handler_History__c/fields/Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By__c</fullName>
    <label>Uploaded By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>