force-app/main/default/objects/Document_Handler_History__c/fields/Uploaded_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Date_Time__c</fullName>
    <label>Uploaded Date/Time</label>
    <type>DateTime</type>
</CustomField>