force-app/main/default/objects/Document_Handler_History__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>DMS_System_Name__c</columns>
    <columns>Document_Handler__c</columns>
    <columns>Document_Path__c</columns>
    <columns>File_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>